# INNC

./: .buildinfo  .clangd  .gitignore  LICENSE  README.md  dev.html  environment.yml  genindex.html  index.html  manual.html  meson.build  objects.inv  quickstart.html  search.html  searchindex.js
.doctrees/: dev.doctree  environment.pickle  index.doctree  manual.doctree  quickstart.doctree
.github/workflows/: ci_meson.yml
_sources/: dev.rst.txt  index.rst.txt  manual.rst.txt  quickstart.rst.txt
docs/: Doxyfile.in  conf.py  dev.rst  index.rst  meson.build
include/INNC/: INNC.hpp  dispatcher.hpp  exceptions.hpp  function.hpp  layouts.hpp  ops.hpp  storage.hpp  tensor.hpp  tensorImpl.hpp  types.hpp  view.hpp
include/INNC/pythonic/: property.h
include/INNC/utils/: compile_opt.hpp  rand.hpp  traits.hpp  utils.hpp
src/INNC/: function.cpp  layouts.cpp  storage.cpp  tensor.cpp  tensorImpl.cpp  types.cpp  view.cpp
src/INNC/utils/: rand.cpp  utils.cpp
test/: meson.build  test.cpp
